; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfcomman.c_RedoDriveWindows.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfcomman.c_RedoDriveWindows.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hwndMDIClient = common dso_local global i32 0, align 4
@WM_MDIGETACTIVE = common dso_local global i32 0, align 4
@GWL_TYPE = common dso_local global i32 0, align 4
@cDrives = common dso_local global i64 0, align 8
@rgiDrive = common dso_local global i64* null, align 8
@DRIVEBAR_FLAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RedoDriveWindows(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load i32, i32* @hwndMDIClient, align 4
  %10 = load i32, i32* @WM_MDIGETACTIVE, align 4
  %11 = call i64 @SendMessage(i32 %9, i32 %10, i32 0, i64 0)
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %3, align 8
  br label %13

13:                                               ; preds = %8, %1
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* @GWL_TYPE, align 4
  %16 = call i64 @GetWindowLongPtr(i32* %14, i32 %15)
  store i64 %16, i64* %4, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp sge i64 %17, 0
  br i1 %18, label %19, label %41

19:                                               ; preds = %13
  store i64 0, i64* %5, align 8
  br label %20

20:                                               ; preds = %37, %19
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* @cDrives, align 8
  %23 = icmp slt i64 %21, %22
  br i1 %23, label %24, label %40

24:                                               ; preds = %20
  %25 = load i64*, i64** @rgiDrive, align 8
  %26 = load i64, i64* %5, align 8
  %27 = getelementptr inbounds i64, i64* %25, i64 %26
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* %4, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %24
  %32 = load i64, i64* %4, align 8
  %33 = call i32 @FillToolbarDrives(i64 %32)
  %34 = load i64, i64* %5, align 8
  %35 = call i32 @SelectToolbarDrive(i64 %34)
  br label %40

36:                                               ; preds = %24
  br label %37

37:                                               ; preds = %36
  %38 = load i64, i64* %5, align 8
  %39 = add nsw i64 %38, 1
  store i64 %39, i64* %5, align 8
  br label %20

40:                                               ; preds = %31, %20
  br label %41

41:                                               ; preds = %40, %13
  %42 = load i32*, i32** %3, align 8
  %43 = load i32, i32* @DRIVEBAR_FLAG, align 4
  %44 = call i32 @MDIClientSizeChange(i32* %42, i32 %43)
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i64 @SendMessage(i32, i32, i32, i64) #1

declare dso_local i64 @GetWindowLongPtr(i32*, i32) #1

declare dso_local i32 @FillToolbarDrives(i64) #1

declare dso_local i32 @SelectToolbarDrive(i64) #1

declare dso_local i32 @MDIClientSizeChange(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
